syntax = "proto3";
package guaproto;
message RemoteCommandRequest {
   bytes exec_cmd = 1;
   string job_id = 2;
   int64 timeout = 3;
   string otp_code = 4;
   int64 plan_time = 5;
   int64 exec_time = 6;
   string exec_job_machine_host = 7;
   string exec_job_machine_mac = 8;
   string exec_job_machine_ip = 9;
   string get_job_machine_host = 10;
   string get_job_machine_mac = 11;
   string get_job_machine_ip = 12;
   string group_name = 13;


}
message RemoteCommandResponse {
}

message RegisterCommandRequest {
    string job_id = 1;
    string otp_token = 2;
    string otp_code =3;
    string group_name=4;
}

message RegisterCommandReponse {
}

service GuaNode {
    rpc RemoteCommand(RemoteCommandRequest) returns (RemoteCommandResponse){
    }
    rpc RegisterCommand(RegisterCommandRequest)returns(RegisterCommandReponse){
    }
}
